remove the margin declaration from phedex-core-overlay, no longer needed now that the overlay element is correctly aligned

--- a/PhEDExWeb/ApplicationServer/css/phedex.css
+++ b/PhEDExWeb/ApplicationServer/css/phedex.css
@@ -255,7 +255,7 @@ a.phedex-core-control-widget-disabled { /* extra specificity ('a') to take prece
   width:20px;
 }
 
-.phedex-core-overlay { position:absolute; background-color:#bbf; border:1px dotted black; padding:0; margin:10 0 0; opacity: 0.92; }
+.phedex-core-overlay { position:absolute; background-color:#bbf; border:1px dotted black; padding:0; margin:0; opacity: 0.92; }
 .phedex-core-overlay .hd { background-color:#eee; margin: 5px 5px 0; }
 .phedex-core-overlay .bd { background-color:#fff; margin: 0   5px 0; }
 .phedex-core-overlay .ft { background-color:#eee; margin: 0   5px 5px; }
